--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "homepage": "https://github.com/trufflesuite/truffle-hdwallet-provider#readme",
   "dependencies": {
-    "bip39": "^2.2.0",
-    "ethereumjs-wallet": "0.6.0",
-    "ethereumjs-util": "^5.1.1",
+    "create-hash": "^1.2.0",
     "ethereumjs-tx": "^1.3.7",
+    "ethereumjs-util": "^5.1.1",
+    "ethereumjs-wallet": "0.6.0",
+    "pbkdf2": "^3.0.17",
+    "safe-buffer": "^5.1.2",
     "web3": "^0.18.2",
     "web3-provider-engine": "^14.0.5"
   },
